--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,19 +1,21 @@
 header{
     background-image: url(../images/apple-pie.jpg);
     background-size: cover;
-    height: 400px;
+    height: 500px;
     margin: 0 auto;
 }
 
 body{
  color: grey;
+ margin: 0;
 }
 
 h1{
     color: white;
     font-weight: normal;
     text-align:center;
-    padding-top: 150px
+    padding-top: 150px;
+    margin: 0;
 }
 
 #description {
